stormsend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic
  namespace: petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      run: petclinic
  template:
    metadata:
      labels:
        run: petclinic
    spec:
      containers:
        - image: harbor.mgmt.tkg-vsphere-lab.winterfell.live/petclinic/petclinic@sha256:b00cc510c1409ee9f57ecca2231a81c6de63e953448dd651952adce1ad696b0f
          name: petclinic
