stormsend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: petclinic
  namespace: petclinic
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    run: petclinic
  type: ClusterIP
